fully integrated bokeh plots

--- a/django_proto/templates/navbar.html
+++ b/django_proto/templates/navbar.html
@@ -17,13 +17,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Tuurtjes</a>
+          <a class="navbar-brand" href="/">Tuurtjes</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="#">bokeh plots</a></li>
+            <li><a href="/bokeh_plots">bokeh plots</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             {% if user.is_authenticated %}
@@ -39,7 +39,6 @@
 
     {% block body %}
     {% endblock %}
-
     </body>
 </html>
 
