--- a/accounts/templates/accounts/bokeh_test.html
+++ b/accounts/templates/accounts/bokeh_test.html
@@ -6,6 +6,11 @@
 <p>
 <!--The next 4 lines are the output of the print statement from the python code-->
 
-<script src="http://localhost:5006/sliders/autoload.js?bokeh-autoload-element=5615043e-894f-4c35-a7a0-d91b3d7989ca&bokeh-app-path=/sliders&bokeh-absolute-url=http://localhost:5006/sliders" id="5615043e-894f-4c35-a7a0-d91b3d7989ca"></script>
+<script
+    src="http://localhost:5006/sliders/autoload.js?bokeh-autoload-element=be6e4391-fcca-42ec-8933-fc5f431e03ba&bokeh-app-path=/sliders&bokeh-absolute-url=http://localhost:5006/sliders"
+    id="be6e4391-fcca-42ec-8933-fc5f431e03ba"
+    data-bokeh-model-id=""
+    data-bokeh-doc-id=""
+></script>
 </body>
 </html>
